--- a/WriteUp/report.tex
+++ b/WriteUp/report.tex
@@ -103,7 +103,7 @@ Imbalanced datasets significantly compromise the performance of many traditional
 			\begin{equation*}
 				F_1 = 2\frac{\mathrm{precision}\times\mathrm{recall}}{\mathrm{precision}+\mathrm{recall}},
 			\end{equation*}
-where the precision is the ratio between correctly identified minority samples and the total number of minority samples, while the recall is given by the fraction of correctly identified minority samples over all samples.
+where the precision is the ratio between correctly identified minority samples and the total number of minority samples, while the recall is given by the fraction of correctly identified minority samples over all samples. This metric clearly explains if the classes (including the minoritary) are correctly handled by the model or not. 
 
 	\subsection{Accomplishments}
 
@@ -147,7 +147,7 @@ where the precision is the ratio between correctly identified minority samples a
 		\end{align*}
 where $p$ and $p'$ denote the posterior probability of encountering a sample from the minority class when employing the original and the undersampled dataset respectively. Whereas $\beta$ denotes the probability of keeping a sample from the majority class.
 
-		The posterior is highly affected by the rate of the sampling. As more samples are removed, the classification is more biased towards the minority class. Figure \ref{fig.:Undersampling_2D_Contour_Classification} shows the decision region of a naive Bayes classifier. As the training set is undersampled the region of points that are labeled as the minority class grows. The rate of undersampling not only influences the posterior bias, but also the algorithm's ability to generalize. Thus, $\beta$ should be chosen with care. Figure \ref{fig.:Undersampling_F1_Score} presents the average F1-score over different training sets. We observe that the score is concave and in this case the optimum occurs with $\beta=0.82$.
+		The posterior is highly affected by the rate of the sampling. As more samples are removed, the classification is more biased towards the minority class. Figure \ref{fig.:Undersampling_2D_Contour_Classification} shows the decision region of a naive Bayes classifier. As the training set is undersampled the region of points that are labeled as the minority class grows. The rate of undersampling not only influences the posterior bias, but also the algorithm's ability to generalize. Thus, $\beta$ should be chosen with care. Figure \ref{fig.:Undersampling_F1_Score} presents the average F1-score over different training sets. We observe that the score is concave and in this case the optimum occurs with $\beta=0.82$. \textcolor{red}{I don't think so}
 
 			\begin{figure}
 				\includegraphics[scale=0.3]{Undersampling_2D_Contour_Classification}
@@ -223,7 +223,9 @@ where $p$ and $p'$ denote the posterior probability of encountering a sample fro
 	\subsection{Cost-Sensitive Techniques}
 	Blabla
 
-\section{Classification impact on Real Data}
+\section{Classification Impact on Real Data}
+For the rest of the paper, the Twitter dataset will be used. The first attempt was to use the same techniques that have been previously explained to the bi-dimensional dataset. The presence of categorical variables makes unsuitable the oversampling and custom cost-sensitive approaches. Therefore, an approach that relays on undersampling and Naive Bayes is employed. F1-score is 67.83\% and the undersampling doesn't make any improvements (even trying different betas). The only solution is to use more complex classifiers that can cope with a dataset like this. 
+
 Ensemble Classifiers are known to improve the performance of single classifiers in imbalanced datasets [A Review on Ensembles for the Class Imbalance] by combining separate weak learners into a composite whole. Both bagging and boosting algorithms have been implemented from scratch to explore their advantages and compare them with highly-effective classifiers such as XGBoost. 
 	\textcolor{red}{Check this}
 As we have stated, in recent years, Ensemble Classifiers have arisen as a possible solution to the class imbalance problem attracting great interest among researchers [45], [47], [50], [62]. 
@@ -348,11 +350,11 @@ XGBoost is one of the most effective classification algorithms nowadadays, and i
 In practice, it is the classification alogirthm that gives the highest F1-score and accuracy. The XGBoost library is used to train this algortihm for our dataset.
 
 \section{Results and Discussion}
-This section discusses the performance of each classifier in terms of imbalance impact, training error and diversity.
+This section discusses the performance of each classifier, addresses how these algorithms work for different imbalance rates and show how the number of learners affect the true and empirical risks.
 
 \subsection{Performance Results}
 
-The best performance results of each methodology are shown in the table below. This table shows the metrics of the best F-1 score so it is possible to compare the algorithms from multiple perspectives.
+The performance results of each methodology are shown in the table below. This table shows the metrics of F1-score, accuracy, precision, recall and AUC in order to compare the algorithms from multiple perspectives. All scores have been obtained with classifiers that had 100 weak learners. 
 
 \begin{table}[htbp]
 \caption{Best Classification Performances}
@@ -418,23 +420,34 @@ sampling)& XGBoost  &87.57&87.51&87.65&87.51&84.53 \\
 \end{center}
 \end{table}
 
-In the category of ensemble algortihms, XGBoost outperforms every other algortihm in all the metrics. F1-score is close to 90\%. Next algortihm is AdaBoost, whose F1-score is above 84\%. The rest of ensemble classifiers are clearly inferior. Regarding cost sensitive algortihm, for this particular dataset it doesn't give any advantage. For hybrid algortihms, which combine ensemble and cost-sensistive algortihms plus undersampling, a beta of 0.55 is chosen. A few of the classifiers improve, as it is the case of Random Forest and AdaCost, while the others become a little bit more. However, XGBoost still has the largest F1-score. 
+In the category of ensemble algortihms, XGBoost outperforms every other algortihm in all metrics. Looking at F1-score, XGBoost is close to 90\%. Next algortihm is AdaBoost, whose F1-score is above 84\%. The rest of ensemble classifiers are clearly inferior. Regarding cost sensitive algortihms, for this particular dataset they doesn't give any advantage. For hybrid algortihms, which combine ensemble and cost-sensistive algortihms plus undersampling, the optimum beta (the one that gives the maximum F1-score) for each algortihm is selected. A few of the classifiers improve, as it is the case of Random Forest and AdaCost, while the others become a little bit more. However, XGBoost still has the largest F1-score. 
 
 \subsection{Impact of Imbalance Data on Classification}
 
-Chart of F1-score vs. Imabalance
+This section study how each algortihm work if less samples of the majority class are considered (conceptually, this is similar to undersample the majority class). Figure \ref{Fig:ImbalanceComparison} shows the perfomance of each algortihm for different rates. For example, the rate of 0.5 implies that only one half of the majority class samples are considered. 
 
 \begin{figure}[htbp]
 \centerline{\includegraphics[scale=0.35]{pictures/Imbalance_Comparison1.png}}
 \caption{Impact of imbalanced training set on classification.}
-\label{ImbalanceComparison}
+\label{Fig:ImbalanceComparison}
 \end{figure}
 
--- Comments --
+It is really interesting to see that most of the algortihms have a peak in the F1-score metric when rates around 0.6 are considered. Taking in account that the majority class is around a 70\% of all the samples, using such rate implies that minority and majority class are much closer to be balanced. 
 
 \subsection{Overfitting Analysis}
 
-Chart of risk (test and training errors) vs. Complexity
+Figure \ref{fig:True_empirical_risk_complexity} shows the evolution of both empirical and true risk (training and test errors, respectively) for increasing algortihm complexity. It is supposed that complexity increases with the number of learners trained by the algortihm, which necessarily involve a larger number of hypotheses. As it can be appreciated, XGBoost is the algortihm that minimizes the true risk. Even with just a few estimators, it is better than any other algortihm. The true risk fastly decreases as the number of learners grow and it becomes estable below 12\% around 50 learners. 
+
+\begin{figure}
+	\includegraphics[scale=0.55]{True_empirical_risk_complexity}
+	\centering
+	\caption{True and Empirical risks vs. complexity.}
+	\label{fig:True_empirical_risk_complexity}
+\end{figure}
+
+Regarding other algortihms, AdaBoost and AdaMEC tend to be more and more similar when the number of weak learners increase. Not being comparable to XGBoost, both performances are satisfactory. However, AdaMEC seems to be always better. Then, AdaCost, Bagging and Random Forest doesn't have any great improvement when the number of learners increases and the true risk is quite high. 
+
+It is noticeable that the true risk remains stable after a certain number of learners, while the empirical risk always seems to be decrease (this is specially visible in XGBoost). This occurs because the algorithm learns patterns that are extremely specific to the training set, but which are not generalizable to the test set. Therefore, very little improvements are seen on the true risk. In the other algortihms, the different between empricial and true risk is not as significant, but the true risk always remain higher than the empirical risk.
 
 \subsection{Diversity Analysis}
 
