Changes to the paper

--- a/WriteUp/report.tex
+++ b/WriteUp/report.tex
@@ -425,7 +425,7 @@ This section study how each algortihm work if less samples of the majority class
 \label{Fig:ImbalanceComparison}
 \end{figure}
 
-It is really interesting to see that most of the algortihms have a peak in the F1-score metric when rates around 0.6 are considered. Taking in account that the majority class is around a 70\% of all the samples, using such rate implies that minority and majority class are much closer to be balanced. 
+It is really interesting to see that most of the algortihms have a peak in the F1-score metric when rates around 0.6 are considered. Taking in account that the majority class is around a 70\% of all the samples, using such rate implies that minority and majority class are much closer to be balanced. Random Forest have a strong peak on 0.52 that supports why on the previous section this algorithm improves a 10\% in its F1-score when the undersampling is included. 
 
 \subsection{Overfitting Analysis}
 
